# kicad-edit-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SEXP_SURGERY_SPEC.md  config.yaml  kicad_helpers.py  pyproject.toml  server.py  sexp_surgery.py
.beads/: issues.jsonl
.beads/memory/: knowledge.jsonl
.claude/agents/: architect.md  code-reviewer.md  detective.md  discovery.md  python-backend-supervisor.md  scout.md  scribe.md
.claude/hooks/: validate-completion.sh
pytest-of-simon/: pytest-current
pytest-of-simon/pytest-0/: test_explicit_visibility_overrcurrent  test_get_component_c1current  test_get_component_missing_raicurrent  test_get_component_r1current  test_get_component_returns_viscurrent  test_list_components_filter_ccurrent  test_list_components_filter_nocurrent  test_list_components_returns_acurrent  test_list_net_classes_default_current  test_list_net_classes_defaultcurrent  test_new_property_defaults_hidcurrent  test_new_reference_value_defaucurrent  test_rename_net_no_matchcurrent  test_rename_net_successcurrent  test_rename_net_verifies_in_ficurrent  test_update_component_file_chacurrent  test_update_component_missing_current  test_update_component_remove_pcurrent  test_update_component_set_dnpcurrent  test_update_component_set_valucurrent  test_update_net_class_add_pattcurrent  test_update_net_class_create_ncurrent  test_update_net_class_duplicatcurrent  test_update_net_class_update_rcurrent  test_update_preserves_hidden_pcurrent  (+3 more)
tests/: test_helpers.py  test_preservation.py  test_server.py  test_sexp_surgery.py
(+17 files in other folders)
