[project]
name = "kicad-edit-mcp"
version = "0.1.0"
description = "KiCad schematic/project modification MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "sexpdata",
]

[project.scripts]
kicad-edit-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "kicad_helpers", "sexp_surgery"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
